--- a/TeremunsCarrierAssistant.csproj
+++ b/TeremunsCarrierAssistant.csproj
@@ -59,17 +59,14 @@
         <Compile Include="FleetCarrier\Jump.cs" />
         <Compile Include="FleetCarrier\Refuel.cs" />
         <Compile Include="FlightPlan.cs" />
-        <Compile Include="Form1.cs">
-            <SubType>Form</SubType>
-        </Compile>
-        <Compile Include="Form1.Designer.cs">
-            <DependentUpon>Form1.cs</DependentUpon>
-        </Compile>
         <Compile Include="Keyboard.cs" />
         <Compile Include="Main.cs" />
         <Compile Include="Main.Designer.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <EmbeddedResource Include="Main.resx">
+          <DependentUpon>Main.cs</DependentUpon>
+        </EmbeddedResource>
         <EmbeddedResource Include="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
             <LastGenOutput>Resources.Designer.cs</LastGenOutput>
